# Programming-in-Artificial-Intelligence

./: .gitignore  .gitmodules  BUILD.md  test.cu
hw1/: draw.py  hw1.py  main.py  test.ipynb  test.py  train.py
hw2/: ActivationFunctions.cu  ActivationFunctions.h  CMakeLists.txt  Makefile  Tensor.cu  Tensor.h  Tensor_test.cu  test_activations.cu  test_tensor.cu
hw3/: main.cu  report.md
hw4/: REPORT.md  mnist_utils.py  setup.py  setup_tensor.py  test_modules.py  test_mytensor.py
hw4/src/: ActivationFunctions.cu  ActivationFunctions.h  Modules.cu  Modules.h  Tensor.cu  Tensor.h  TensorBindings.cpp
hw5/: report.md  task1_operators.py  task2_autodiff.py  tensor.py  test_task1_backward.py
hw6_attachment/: report.md  task0_autodiff.py  task0_operators.py  task1_optimizer.py  utils.py
